--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 gunicorn==23.0.0
+Flask==2.3.3
+gunicorn==23.0.0
+scikit-learn==1.5.2
+joblib==1.4.2
+numpy==2.1.2
 
 absl-py==2.3.1
 annotated-types==0.7.0
@@ -71,6 +76,7 @@ wordcloud==1.9.4
 wrapt==1.17.3
 xgboost==3.0.5
 xxhash==3.5.0
+
 
 
 
